[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme",email = "guilhermemmatos07@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload" or "py -m uvicorn main:app --reload"

